# pto-isa

./: .gitignore  PTO_ISA_improvement_ideas.md  README.md  config_example.py  pto_compile.py  pto_isa_definition.py  pto_runtime.c  pto_runtime.h  ref_runtime.md
examples/: pto_aten_ir_primitives.py  pto_isa_sinh.py  pto_torch_flexattention.py  pto_torch_functional.py  pto_torch_nn_operators.py  pto_torch_tensor.py
examples/aten_primitives_arm64/: aten_cosh.c  aten_div_scalar.c  aten_mean_row.c  aten_mul_scalar.c  aten_sigmoid.c  aten_sinh.c  prims_abs.c  prims_mul.c  prims_neg.c  prims_reciprocal.c  prims_rsqrt.c  prims_sqrt.c  prims_sub.c  prims_sum_row.c
examples/aten_primitives_ascend910b/: aten_add_scalar.cpp  aten_div_scalar.cpp  aten_gelu.cpp  aten_mm.cpp  aten_mul_scalar.cpp  aten_sigmoid.cpp  aten_sinh.cpp  aten_tanh.cpp  prims_div.cpp  prims_mul.cpp  prims_pow.cpp  prims_rsqrt.cpp  prims_sum_row.cpp
examples/aten_primitives_cuda/: aten_cosh.cu  aten_gelu.cu  aten_mul_scalar.cu  aten_relu.cu  aten_sigmoid.cu  aten_tanh.cu  prims_div.cu  prims_log.cu  prims_maximum.cu  prims_neg.cu  prims_pow.cu  prims_reciprocal.cu
examples/aten_primitives_pto/: aten_div_scalar.pto  aten_gelu.pto  aten_mm.pto  aten_mul_scalar.pto  aten_relu.pto  aten_sigmoid.pto  prims_add.pto  prims_exp.pto  prims_pow.pto  prims_reciprocal.pto  prims_sqrt.pto  prims_sub.pto
examples/bgemm/: config.json  run_arm64.py  run_ascend_a2a3.py  run_ascend_a2a3_sim.py  run_ascend_a5.py  run_cuda.py
examples/sinh_taylor_arm64/: sinh_taylor.c
examples/sinh_taylor_ascend910b/: sinh_taylor.cpp
examples/torch_functional_arm64/: F_batch_norm.c  F_bilinear.c  F_cross_entropy.c  F_elu.c  F_gelu.c  F_group_norm.c  F_hardsigmoid.c  F_hardswish.c  F_hardtanh.c  F_kl_div.c  F_leaky_relu.c  F_linear.c  F_log_softmax.c  F_logsigmoid.c  F_mse_loss.c  F_normalize.c  F_relu.c  F_sigmoid.c  F_silu.c  F_softmax.c  F_softplus.c  F_softsign.c  F_threshold.c
examples/torch_functional_ascend910b/: F_avg_pool2d.cpp  F_batch_norm.cpp  F_cross_entropy.cpp  F_dropout.cpp  F_hardswish.cpp  F_l1_loss.cpp  F_mse_loss.cpp  F_nll_loss.cpp  F_normalize.cpp  F_pairwise_distance.cpp  F_selu.cpp  F_silu.cpp  F_smooth_l1_loss.cpp  F_softplus.cpp  F_softsign.cpp
examples/torch_functional_cuda/: F_adaptive_avg_pool2d.cu  F_avg_pool2d.cu  F_batch_norm.cu  F_bilinear.cu  F_cosine_similarity.cu  F_dropout.cu  F_elu.cu  F_hardswish.cu  F_hardtanh.cu  F_kl_div.cu  F_l1_loss.cu  F_leaky_relu.cu  F_log_softmax.cu  F_logsigmoid.cu  F_mish.cu  F_normalize.cu  F_pairwise_distance.cu  F_relu.cu  F_relu6.cu  F_selu.cu  F_sigmoid.cu  F_softmax.cu  F_softplus.cu  F_tanh.cu
examples/torch_functional_pto/: F_batch_norm.pto  F_cosine_similarity.pto  F_elu.pto  F_hardswish.pto  F_l1_loss.pto  F_linear.pto  F_log_softmax.pto  F_logsigmoid.pto  F_mish.pto  F_nll_loss.pto  F_pairwise_distance.pto  F_selu.pto  F_smooth_l1_loss.pto  F_softsign.pto  F_tanh.pto
examples/torch_nn_arm64/: nn_CrossEntropyLoss.c  nn_Hardswish.c  nn_MSELoss.c  nn_ReLU6.c  nn_SiLU.c  nn_Softplus.c
examples/torch_nn_ascend910b/: nn_CrossEntropyLoss.cpp  nn_ELU.cpp  nn_Hardsigmoid.cpp  nn_L1Loss.cpp  nn_LayerNorm.cpp  nn_LeakyReLU.cpp  nn_LogSoftmax.cpp  nn_MSELoss.cpp  nn_Mish.cpp  nn_RMSNorm.cpp  nn_Softmax.cpp  nn_Tanh.cpp
examples/torch_nn_cuda/: nn_Bilinear.cu  nn_ELU.cu  nn_Embedding.cu  nn_GELU.cu  nn_Hardsigmoid.cu  nn_L1Loss.cu  nn_LogSoftmax.cu  nn_MSELoss.cu  nn_Mish.cu  nn_ReLU.cu  nn_Softmax.cu
examples/torch_nn_pto/: nn_Bilinear.pto  nn_Dropout.pto  nn_Embedding.pto  nn_Hardsigmoid.pto  nn_LogSoftmax.pto  nn_Mish.pto  nn_ReLU.pto  nn_ReLU6.pto  nn_SiLU.pto  nn_Tanh.pto
examples/torch_tensor_arm64/: tensor_abs.c  tensor_add.c  tensor_addcdiv.c  tensor_addcmul.c  tensor_asin.c  tensor_atan.c  tensor_clamp.c  tensor_cos.c  tensor_cosh.c  tensor_diff.c  tensor_div.c  tensor_exp2.c  tensor_expm1.c  tensor_hypot.c  tensor_log.c  tensor_logit.c  tensor_max_elementwise.c  tensor_mean.c  tensor_min_elementwise.c  tensor_mm.c  tensor_prod.c  tensor_reciprocal.c  tensor_relu.c  tensor_sigmoid.c  tensor_sign.c  tensor_softmax.c  tensor_sqrt.c  tensor_sub.c  tensor_tan.c
examples/torch_tensor_ascend910b/: tensor_abs.cpp  tensor_addcmul.cpp  tensor_clamp.cpp  tensor_cos.cpp  tensor_cosh.cpp  tensor_cumsum.cpp  tensor_diff.cpp  tensor_div.cpp  tensor_dot.cpp  tensor_exp.cpp  tensor_exp2.cpp  tensor_expm1.cpp  tensor_frac.cpp  tensor_hypot.cpp  tensor_log10.cpp  tensor_log1p.cpp  tensor_log2.cpp  tensor_mean.cpp  tensor_mm.cpp  tensor_mv.cpp  tensor_neg.cpp  tensor_sum.cpp  (+2 more)
pto-as/: __init__.py
ref_runtime/: README.md  ci.sh  host_device_share_mem_task_submit_example.c
runtime/: CMakeLists.txt  README.md  devicerunner.cpp  devicerunner.h  graphbuilder.cpp
runtime/aicore/: CMakeLists.txt  kernel.cpp
runtime/aicpu/: CMakeLists.txt  graph_executor.cpp  hello_world.cpp
runtime/common/: CMakeLists.txt
runtime/example/: main.py
runtime/example/basic/: CMakeLists.txt  graphbuilder.cpp
runtime/example/basic_python/: CMakeLists.txt  graphbuilder.py
runtime/examples/basic/: README.md  graphbuilder.cpp  main.py
runtime/graph/: AICPU_USER_CONTROL_GUIDE.md  aicpu_func.cpp  aicpu_func.h  graph.cpp  graph.h
runtime/host/: devicerunner.h
runtime/python/: AICPU_COMPILER_USAGE.md  CMakeLists.txt  aicpu_compiler.py  binary_compiler.py  bindings.cpp  runtime_bindings.py
runtime/python/src/: bindings.cpp
runtime/src/aicore/: CMakeLists.txt
runtime/src/aicpu/: CMakeLists.txt  kernel.cpp
runtime/src/graph/: graph.h  handshake.h
runtime/src/host/: devicerunner.cpp  devicerunner.h  pto_runtime_c_api.cpp  pto_runtime_c_api.h
runtime/src/platform/a2a3/aicore/: kernel.cpp
runtime/src/platform/a2a3/aicpu/: kernel.cpp
runtime/src/platform/a2a3/common/: kernel_args.h
runtime/src/platform/a2a3/host/: devicerunner.cpp  devicerunner.h  pto_runtime_c_api.cpp  pto_runtime_c_api.h
runtime/src/runtime/aicpu/: graphexecutor.cpp
runtime/tests/: test_aicpu_compilation.py  test_host_compilation.py
src/runtime/runtime_a2a3/core/aicpu/: CMakeLists.txt  aicpu_kernel.cpp
(+473 files in other folders)
